Fix tests + remove index path

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
   <body>
     <main class="container mx-auto mt-28 px-5 flex">
+      <p style="color: green"><%= notice %></p>
       <%= yield %>
     </main>
   </body>
