--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,1 +1,37 @@
 <h1>Hello</h1>
+
+<% if Current.session %>
+  <p style="color: green"><%= notice %></p>
+
+  <p>Signed in as <%= Current.user.email %></p>
+
+  <h2>Login and verification</h2>
+
+  <div>
+    <%= link_to "Change password", edit_password_path %>
+  </div>
+
+  <div>
+    <%= link_to "Change email address", edit_identity_email_path %>
+  </div>
+
+  <%= button_to "Signin as last user", user_masquerade_path(User.last) %>
+
+  <h2>Access history</h2>
+
+  <div>
+    <%= link_to "Devices & Sessions", sessions_path %>
+  </div>
+
+  <div>
+    <%= link_to "Activity Log", authentications_events_path %>
+  </div>
+
+  <br>
+
+  <%= button_to "Log out", Current.session, method: :delete %>
+<% else %>
+  <div>
+    <%= link_to "Sign in", sign_in_path %>
+  </div>
+<% end %>
