--- a/app/views/mentor_questionnaires/new.html.erb
+++ b/app/views/mentor_questionnaires/new.html.erb
@@ -1,4 +1,4 @@
 <div>
    <h1>Become a #rubyfriend mentor</h1>
-   <%= render "form" %>
+   <%= render "form", mentor_questionnaire: @mentor_questionnaire %>
 </div>
