--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,36 +1,9 @@
-<h1>Hello</h1>
+<div class="bg-blue-500 text-white p-4 rounded-lg">
+  <h1>Hello</h1>
+</div>
 
-<% if Current.session %>
-  <p style="color: green"><%= notice %></p>
 
-  <p>Signed in as <%= Current.user.email %></p>
-
-  <h2>Login and verification</h2>
-
-  <div>
-    <%= link_to "Change password", edit_password_path %>
-  </div>
-
-  <div>
-    <%= link_to "Change email address", edit_identity_email_path %>
-  </div>
-
-  <%= button_to "Signin as last user", user_masquerade_path(User.last) %>
-
-  <h2>Access history</h2>
-
-  <div>
-    <%= link_to "Devices & Sessions", sessions_path %>
-  </div>
-
-  <div>
-    <%= link_to "Activity Log", authentications_events_path %>
-  </div>
-
-  <br>
-
-  <%= button_to "Log out", Current.session, method: :delete %>
-<% else %>
+<% if !Current.session %>
   <div>
     <%= link_to "Sign in", sign_in_path %>
     <%= render "sessions/github_oauth_button" %>
