--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,9 @@
             <div class="border-b border-gray-700">
               <div class="flex h-16 items-center justify-between px-4 sm:px-0">
                 <div class="flex items-center">
-                  <div class="shrink-0 text-white">
-                    FRF
-                    
+                  <div class="shrink-0 flex space-x-4 items-center">
+                    <img class="size-8" src="https://firstrubyfriend.org/images/ruby-plus-one.svg" alt="">
+                    <p class="text-white font-semibold">FirstRubyFriend</p>
                   </div>
                   <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
