--- a/app/views/applicant_questionnaires/_form.html.erb
+++ b/app/views/applicant_questionnaires/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: @mentee_questionnaire) do |form| %>
+<%= form_with(model: @applicant_questionnaire) do |form| %>
   <div class="px-4 py-2 sm:p-8 space-y-8">
-    <% if @mentee_questionnaire.errors.any? %>
+    <% if @applicant_questionnaire.errors.any? %>
       <div>
         <strong >Please fix the following errors:</strong>
         <ul>
-          <% @mentee_questionnaire.errors.full_messages.each do |msg| %>
+          <% @applicant_questionnaire.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
           <% end %>
         </ul>
