--- a/app/views/dashboards/_applicant_awaiting_match.html.erb
+++ b/app/views/dashboards/_applicant_awaiting_match.html.erb
@@ -13,7 +13,7 @@
 
     <p class="text-sm font-medium text-gray-900">Applied! You will be matched shortly.</p>
     <p class="text-sm text-gray-500 mt-1">Matches occur at the start of the month.</p>
-    You requested a mentor <%= @mentee_questionaire.created_at %>
+    You requested a mentor <%= @applicant_questionnaire.created_at %>
   </div>
   <div class="mt-4 flex justify-center">
     <button type="button" class="inline-flex items-center rounded-md bg-gray-800 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
