--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,4 +1,6 @@
-<% if Current.user.active_mentor %> 
+<% if Current.user.admin? %>
+  <%= render "admin" %>
+<% elsif Current.user.active_mentor %>
   <%= render "active_mentor" %>
 <% elsif Current.user.active_applicant %>
   <%= render "active_applicant" %>
