--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,16 @@
                   <div class="shrink-0 flex space-x-4 items-center">
                     <img class="size-8" src="https://firstrubyfriend.org/images/ruby-plus-one.svg" alt="">
                     <p class="text-white font-semibold">FirstRubyFriend</p>
+                    <div class="hidden md:block">
+                      <div class="ml-10 flex items-baseline space-x-4">
+                        <% navigation_links.each do |name, path| %>
+                          <%= link_to name,
+                              path,
+                              class: "rounded-md px-3 py-2 text-sm font-medium #{ (current_page?(path)) ? 'bg-gray-900 text-white' : 'text-gray-300 hover:bg-gray-700 hover:text-white' }"
+                          %>
+                        <% end %>
+                      </div>
+                    </div>
                   </div>
                   <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
@@ -45,8 +55,8 @@
                         data-action="click@window->dropdown#hide touchstart@window->dropdown#hide keydown.up->dropdown#previousItem keydown.down->dropdown#nextItem keydown.esc->dropdown#hide"
                         class="relative ml-3">
                         <div>
-                          <button 
-                            data-action="dropdown#toggle:stop" 
+                          <button
+                            data-action="dropdown#toggle:stop"
                             type="button" class="relative flex max-w-xs items-center rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
                             <span class="absolute -inset-1.5"></span>
                             <span class="sr-only">Open user menu</span>
@@ -81,7 +91,7 @@
         <!-- Header -->
         <header class="py-10">
           <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-            <h1 class="text-3xl font-bold tracking-tight text-white">Dashboard</h1>
+            <h1 class="text-3xl font-bold tracking-tight text-white"><%= current_page_title %></h1>
           </div>
         </header>
       </div>
@@ -96,4 +106,3 @@
     </div>
   </body>
 </html>
-
