first pass at matching UI/UX

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,8 @@
                             "Dashboard" => dashboard_path,
                             "Mentors" => mentors_path,
                             "Applicants" => applicants_path,
-                            "Mentorships" => mentorships_path
+                            "Mentorships" => mentorships_path,
+                            "Matching" => matching_index_path
                           }.each do |name, path| %>
                           <%= link_to name,
                             path,
